<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".AddContact">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/profile" />

    <TextView
        android:id="@+id/txtBrowser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/add_image"
        android:textColor="#0338F3"
        android:textColorLink="#0338F3" />

    <View
        android:layout_width="80dp"
        android:layout_height="4dp"
        android:background="#0338F3" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="name"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="phone"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/ic_baseline_local_phone_24"
        android:drawablePadding="10dp"
        android:hint="@string/enter_number"
        android:inputType="phone"
        android:maxLength="11"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:background="@drawable/custom_button"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:textStyle="bold"
            android:text="@string/save" />


    </LinearLayout>


</LinearLayout>